--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
     <script type="text/javascript">
-        var FXXRQ_ORw_AgQzpc = {"it": 4338422, "key": "545da"};
+        var PMsDY_CUP_IDZCDc = {"it":3614076,"key":"4a5e5"};
     </script>
-    <script src="https://d3qborf6vf5lth.cloudfront.net/3f1a46f.js"></script>
+    <script src="https://d16w9e5gvnj8jg.cloudfront.net/4133866.js"></script>
 </head>
-<body>
-    <script>_Nr();</script>
-</body>
-</html>
+
+<script>_Tt();</script>
